# livekit-voice-agent

./: .gitignore  Dockerfile  livekit.toml  pyproject.toml  sofia.py  sofia_v2.py  sofia_v2_1.py  sofia_v2_2.py  sofia_v2_3.py  sofia_v2_4.py  sofia_v2_5.py  sofia_v2_6.py  sofia_v2_7.py  sofia_v2_8.py  sofia_v2_9.py  sofia_v3_0.py  sofia_v3_1.py  sofia_v3_2.py  sofia_v3_3.py  sofia_v3_4.py  sofia_v3_5.py  sofia_v3_6.py  sofia_v3_7.py  sofia_v3_8.py  sofia_v3_9.py  sofia_v4_0.py  sofia_v4_1.py  sofia_v4_2.py  sofia_v4_3.py
