[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[elevenlabs,silero,turn-detector]>=1.5.0",
    "livekit-plugins-cartesia>=1.4.5",
    "livekit-plugins-deepgram>=1.4.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.4.5",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.9",
    "boto3>=1.43.0",
]
